# Master-M2-FullStack

./: .dockerignore  .gitignore  DEMARRAGE_RAPIDE.md  PARTIE1_DOCKER.docx  PARTIE1_DOCKER.md  PARTIE2_KUBERNETES.docx  PARTIE2_KUBERNETES.md  PARTIE3_GITOPS.docx  PARTIE3_GITOPS.md  PARTIE4_OBSERVABILITE.docx  PARTIE4_OBSERVABILITE.md  PARTIE5_SECURITE_SRE.docx  PARTIE5_SECURITE_SRE.md  README.docx  README.md  install-requirements.sh
.github/workflows/: docker-security.yml
Jour2/: ANALYSE_TEMPLATE.md  ENONCE_TP.md  INSTALLATION.md  README.md  VERIFICATION.md  requirements.txt
Jour2/java-api/: .dockerignore  Dockerfile.java-distroless  Dockerfile.java-multi-stage  pom.xml
Jour2/node-api/: .dockerignore  Dockerfile.distroless  Dockerfile.multi-stage  Dockerfile.standard  package-lock.json  package.json  tsconfig.json
Jour2/python-api/: .dockerignore  Dockerfile.python-distroless  Dockerfile.python-multi-stage  pyproject.toml
Jour2/python-api/app/: __init__.py  main.py
Jour2/scripts/: analyze.sh  build-all.sh  build-secure.sh  green-impact.sh
TD-Jour5/: AIDE.md  README.md  kind-config.yaml
TD-Jour5/backstage/: EXEMPLE-catalog-info.yaml  EXEMPLE-template.yaml
TD-Jour5/kyverno/: EXEMPLE-policy-mutation.yaml  EXEMPLE-policy-validation.yaml
TD-Jour5/sre/: TEMPLATE-postmortem.md
TD-Jour6/: AIDE.md  Guide_Aide_TP_Docker.docx  PARTIE2_KUBERNETES.md  PARTIE4_OBSERVABILITE.md  README.md  TP_Docker_Avance_Master2_Data.docx
TP-J3/: .gitignore  README.md
TP-Jour4/: README.md
node-api/: Dockerfile.distroless
scripts/: analyze.sh  build-all.sh  security-scan.sh
(+71 files in other folders)
